--- a/OnlineVisaCenter/pom.xml
+++ b/OnlineVisaCenter/pom.xml
@@ -8,12 +8,11 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
-    <groupId>com.com.vironit.onlinevisacenter</groupId>
+    <groupId>com.vironit.onlinevisacenter</groupId>
     <artifactId>online-visa-center</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
-
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -45,7 +44,17 @@
             <version>5.2.16.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-c3p0</artifactId>
+            <version>5.2.16.Final</version>
+        </dependency>
     </dependencies>
 
 
