--- a/OnlineVisaCenter/src/main/resources/database.properties
+++ b/OnlineVisaCenter/src/main/resources/database.properties
@@ -8,3 +8,4 @@ hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 hibernate.show_sql=true
 hibernate.format_sql=true
 hibernate.use_sql_comments=true
+hibernate.jdbc.lob.non_contextual_creation=true
