--- a/OnlineVisaCenter/src/main/resources/database.properties
+++ b/OnlineVisaCenter/src/main/resources/database.properties
@@ -9,3 +9,16 @@ hibernate.show_sql=true
 hibernate.format_sql=true
 hibernate.use_sql_comments=true
 hibernate.jdbc.lob.non_contextual_creation=true
+
+#test
+test.postgres.driver=org.postgresql.Driver
+test.postgres.url=jdbc:postgresql://localhost:5432/test
+test.postgres.username=postgres
+test.postgres.pass=21032018lna
+
+test.hibernate.hbm2ddl.auto=create-drop
+test.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+test.hibernate.show_sql=true
+test.hibernate.format_sql=true
+test.hibernate.use_sql_comments=true
+test.hibernate.jdbc.lob.non_contextual_creation=true
