move static resources to resource/static folder

--- a/OnlineVisaCenter/src/main/resources/validation_messages.properties
+++ b/OnlineVisaCenter/src/main/resources/validation_messages.properties
@@ -41,3 +41,7 @@ visa.type.null = visa type can not be null
 visa.price.null = visa price can not be null
 visa.price = visa price must consist of {integer} integer digits and {fraction} fraction
 visa.country.null = visa country can not be null
+
+validation_errors = Validation errors occurs: 
+invalid_json = invalid JSON
+delete_error = Can't be deleted. This object used by others.
