replace dao by spring data repositories

--- a/OnlineVisaCenter/src/main/resources/application.properties
+++ b/OnlineVisaCenter/src/main/resources/application.properties
@@ -1,2 +1,22 @@
 server.port=8888
+
+spring.profiles.active=dev
+
+db.user=postgres
+db.password=root
+db.name=visa_center
+db.host=localhost
+db.port=5432
+
+spring.datasource.url=jdbc:postgresql://${db.host}:${db.port}/${db.name}?user=${db.user}&password=${db.password}
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.hikari.maximum-pool-size=10
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.properties.hibernate.hbm2ddl.auto=validate
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 spring.jackson.serialization.write_dates_as_timestamps=false
