--- a/OnlineVisaCenter/src/main/resources/application.properties
+++ b/OnlineVisaCenter/src/main/resources/application.properties
@@ -20,3 +20,10 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jackson.serialization.write_dates_as_timestamps=false
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=losnikita1995@gmail.com
+spring.mail.password=Khrol1996
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
